# dissertation

./: .gitignore  .gitman.yml  README.md  Seznam absolvovanych predmetu.docx  bib.bib  main.tex  requirements.txt  zadost_o_obhajobu.doc
misc/: compton_camera.py  cone_distance.py
misc/geometry/: cone.py  convex_polygon.py  polygon3d.py  raytracing.py  rectangle3d.py  solid_angle.py
misc/klein_nishina/: main.py
presentation/: beamercolorthemebarnowl.sty  beamercolorthemeblackbird.sty  beamerouterthemepagenumberandbackground.sty  beamerouterthemesplitbarsbackground.sty  beamerthemeClassyCharcoal.sty  cvut_colors.tex  main.bib  main.tex  present.sh  videos
publication_list/: main.bib  main.tex  papis_export.bib
ros_packages/: compton_camera  compton_camera_python  compton_cone_generator  gazebo_rad_msgs  gazebo_rad_source  gazebo_timepix  geometry_visual_utils  map_builder  rad_msgs  rad_utils  radiation_utils  rviz_visual_tools  utils
ros_packages/simulation/: CMakeLists.txt  package.xml
ros_packages/simulation/config/uav_manager/: control_manager.yaml
ros_packages/simulation/config/uav_manager/constraint_manager/: constraint_manager.yaml  constraints.yaml
ros_packages/simulation/config/uav_manager/gain_manager/: gain_manager.yaml  gains.yaml
ros_packages/simulation/launch/: rviz.launch  simulation.launch  uav_manager.launch
ros_packages/simulation/tmux/one_drone/: .tmuxinator.yml  control_manager.yaml  layout.json  session.yml  world.yaml
ros_packages/simulation/tmux/one_drone/custom_configs/: control_manager.yaml
ros_packages/simulation/tmux/three_drones/: pos.txt  session.yml
thesis/: abstract.txt  all_my_coauthors.bib  bib.bib  bib_postprocessed.bib  color_pages.txt  core_coauthors.txt  main.bib  main.tex  papis_export.bib  ppb.sh  tikz-templates.tex
(+216 files in other folders)
