<?xml version="1.0"?>
<package format="2">

  <name>radiation_simulation</name>
  <version>0.0.1</version>
  <description>Package for simulation of fire</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_uav_manager</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>

  <export>
  </export>

</package>
